tests/ui/parallel-rustc/deadlock-issue-119785.stderr
error: expected `const`, found `From`
   |
LL | const fn apit_assoc_bound(_: impl IntoIterator<Item: ~const T> + ~From Destruct) {}
   |                                                                   ^^^^ expected `const`

error[E0407]: method `huh` is not a member of trait `Foo`
   |
LL | /     fn huh() -> impl ~const PartialEq + ~const Destruct + Copy {
LL | |         123
LL | |     }
   | |_____^ not a member of trait `Foo`

error[E0405]: cannot find trait `Index` in this scope
   |
LL |     fn foo(&mut self, x: <Self as Index>::Output) -> <Self as Index>::Output;
   |                                   ^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::ops::Index;
   |

error[E0405]: cannot find trait `Index` in this scope
   |
LL |     fn foo(&mut self, x: <Self as Index>::Output) -> <Self as Index>::Output;
   |                                                               ^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::ops::Index;
   |

error[E0576]: cannot find method or associated constant `huh` in trait `Foo`
   |
LL |     fn foo(&mut self, x: <Self as Index>::Output) -> <Self as Index>::Output;
   |     ------------------------------------------------------------------------- associated function `foo` defined here
...
LL |     let x = <() as Foo>::huh();
   |                          ^^^
   |                          |
   |                          not found in `Foo`
   |                          help: maybe you meant this associated function: `foo`

   |
   |

   |

error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL |     fn huh() -> impl ~const PartialEq + ~const Destruct + Copy {
   |                             ^^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL |               -> impl ~const PartialEq + ~const Destruct
   |                              ^^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL | const fn cmp(a: &impl ~const PartialEq) -> bool {
   |                              ^^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL |     fn huh() -> impl ~const PartialEq + ~const Destruct + Copy {
   |                                                ^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL | const fn apit(_: impl ~const T + ~const Destruct) {}
   |                                         ^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL |               -> impl ~const PartialEq + ~const Destruct
   |                                                 ^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL |               -> impl ~const PartialEq + ~const Destruct
   |                              ^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL |               -> impl ~const PartialEq + ~const Destruct
   |                                                 ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL |     fn huh() -> impl ~const PartialEq + ~const Destruct + Copy {
   |                             ^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL |     fn huh() -> impl ~const PartialEq + ~const Destruct + Copy {
   |                                                ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL | const fn wrap(x: impl ~const PartialEq + ~const Destruct)
   |                              ^^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
   |
LL | const fn wrap(x: impl ~const PartialEq + ~const Destruct)
   |                                                 ^^^^^^^^

error[E0046]: not all trait items implemented, missing: `foo`
   |
LL |     fn foo(&mut self, x: <Self as Index>::Output) -> <Self as Index>::Output;
   |     ------------------------------------------------------------------------- `foo` from trait
...
LL | impl const Foo for () {
   | ^^^^^^^^^^^^^^^^^^^^^ missing `foo` in implementation

error[E0493]: destructor of `impl ~const T + ~const Destruct` cannot be evaluated at compile-time
   |
LL | const fn apit(_: impl ~const T + ~const Destruct) {}
   |               ^                                    - value is dropped here
   |               |
   |               the destructor for this type cannot be evaluated in constant functions


For more information about an error, try `rustc --explain E0046`.